# open_dbm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  blog.html  help.html  index.html  license.txt  opensearch.xml  process_data.py  process_dbm.sh  process_dir.py  process_file.py  pytest.ini  readme.md  requirements.txt  run_dashboard.sh  search.html  setup.cfg  setup.py  showcase.html  sitemap.xml  sw.js  sw.js.map  tox.ini  versions.html
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  ISSUES.md  LICENSE
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation.yaml  feature-request.yaml
.github/workflows/: open_dbm-build-checking.yml  open_dbm-code-checking.yml  open_dbm-docs-deploy.yml  open_dbm-publish-release.yml  open_dbm_build_openface.yml
OpenFace/: .dockerignore  CMakeLists.txt  OpenFace.sln  README.md  appveyor.yml
OpenFace/cmake/: OpenFaceConfig.cmake.in
OpenFace/docker/: Dockerfile  README.md
OpenFace/exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp
OpenFace/exe/FaceLandmarkVidMulti/: CMakeLists.txt  FaceLandmarkVidMulti.cpp  FaceLandmarkVidMulti.vcxproj
OpenFace/exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.vcxproj
OpenFace/lib/local/GazeAnalyser/: CMakeLists.txt
OpenFace/lib/local/GazeAnalyser/include/: GazeEstimation.h
OpenFace/matlab_runners/: Full_test_suite.m  Readme.txt
OpenFace/model_training/: copyright.txt
OpenFace/python_scripts/: testing_gaze.py
api/: api-doc.html  facial-activity-api.html  movement-api.html  speech-api.html  verbal-acoustics-api.html
assets/css/: styles.eafffaa1.css
assets/js/: 0179dff0.4b8dfff9.js  0179dff0.7aa82053.js  0179dff0.e8facb89.js  0179dff0.f8fa79c3.js  01a85c17.4dcb6ee5.js  01b09806.28b6bc3a.js  01b09806.5b8f4d63.js  01b09806.a78ee56b.js  01b09806.a873ab89.js  01d07357.0eb5bb71.js  01d07357.0f260e3f.js  01d07357.52e10797.js  01d07357.a5997bc8.js  02b52b0e.061bd0bb.js  02b52b0e.2e7d754c.js  02b52b0e.35932dc8.js  02b52b0e.ac301a07.js  07ba97ad.105566bc.js  07ba97ad.8e050b3d.js  07ba97ad.c8f16744.js  07ba97ad.dc5408ab.js  08d4e084.0573a605.js  08d4e084.9b6466a0.js  08d4e084.f2e5113c.js  08d4e084.f4426291.js  0b4c1f78.0311bfdb.js  0b4c1f78.1fc45d32.js  0b4c1f78.703ef090.js  0b4c1f78.c88a3266.js  0c9dbe64.43281969.js  0c9dbe64.58d89a21.js  0c9dbe64.5cf2b6c7.js  0c9dbe64.92d727ee.js  0ce7495b.0226c4fb.js  0ce7495b.50149f5a.js  0ce7495b.615325ed.js  0ce7495b.705172d1.js  0decd134.26fc887d.js  0decd134.422f0fcb.js  0decd134.e9b0cc37.js  (+691 more)
blog/: archive.html  atom.xml  feed.json  rss.xml  tags.html
blog/tags/: announcement.html  release.html
contributing/: changelogs-in-pull-requests.html  code-of-conduct.html  community-discussions.html  how-to-contribute-code.html  issue-reporting.html  license-contact.html  opendbm-listserv-signup.html  overview.html  publications-and-referencing.html
dashboard/: .gitignore  package-lock.json  package.json
dashboard/flask-server/: process_input_data.py  server.py
dashboard/public/: index.html
dashboard/src/: App.js  DBM_attribute_dict.json
dbm_lib/config/: config_derive_feature.py  config_raw_feature.py  config_reader.py
dbm_lib/controller/: process_feature.py
docs/: .alexrc.js  LICENSE  action-units.html  amount-data-needed.html  audio-guidelines.html  audio-intensity.html  basic-usage.html  beginner-installation.html  behavioral-considerations.html  biomaker-variables.html  data-guidelines.html  dependencies-installation.html  emotional-expressivity.html  eye-blink-behavior.html  eye-gaze-directionality.html  facial-activity.html  facial-asymmetry.html  facial-landmark.html  facial-tremor.html  formant-frequencies.html  fundamental-frequency.html  getting-started.html  glottal-to-noise-excitation-ratio.html  harmonics-to-noise-ratio.html  head-movement.html  jitter.html  lexical-richness.html  more-resources.html  opendbm-docker-output.html  opendbm-docker-usage.html  openface-docker-installation.html  overall-expressivity.html  package-lock.json  package.json  pain-expressivity.html  parts-of-speech.html  pause-characteristics.html  pro-installation.html  rate-of-speech.html  raw-variables.html  (+10 more)
docs/2.0/: action-units.html  amount-data-needed.html  audio-guidelines.html  audio-intensity.html  beginner-installation.html  (+39 more)
extras/: changelogs-in-pull-requests.html  ci-cd-pipeline.html  code-of-conduct.html  community-discussions.html  extras.html  how-to-contribute-code.html  issue-reporting.html  license-contact.html  odbm-doc.html  odbm-rest-api.html  opendbm-listserv-signup.html  opendbm-python-api-add-new-variable.html  opendbm-python-api-unittest.html  opendbm-python-api.html  overview.html  publications-and-referencing.html
hand_tremor/: ht_process.py  requirement.txt
opendbm/: __init__.py
pkg/OpenFace/exe/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp
raw_data/: sample.txt
rest_api/: LICENSE  Makefile  Makefile-poetry  README.md  poetry.lock.bkp  pyproject.toml  requirements.txt
rest_api/app/: __init__.py  main.py
rest_api/app/config/: db.py
rest_api/app/files/: $process_movement  test.csv
rest_api/app/routers/: router.py
rest_api/app/schemas/: biomaker_request.py  file_properties.py  token.py  user.py
rest_api/app/services/: main.py
rest_api/app/services/auth/: auth.py
rest_api/app/services/biomaker/: biomaker.py
rest_api/app/services/file/: file.py  i_file.py
sample_data/: sample_script.py
sample_output/: metadata.csv
tests/: conftest.py
visualization_interface/: README.md
(+1681 files in other folders)
