[tool.poetry]
name = "OpenDBM-REST-API"
version = "0.0.1"
description = ""
authors = ["AiCure <dev@aicure.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.62.0"
loguru = "^0.5.3"
SQLAlchemy = "^1.3.20"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.24.25"
aiofiles = "^0.8.0"
open_dbm

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
